# teamspeak-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  claude_desktop_config.json  config.docker.env  config.example.env  docker-compose.ghcr.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  install.py  pyproject.toml  requirements.txt  test_mcp.py  ts3server.ini
.github/workflows/: ci.yml  docker-publish.yml  integration-tests.yml  pypi-publish.yml  test.yml
docs/: DEBUG_LOGS.md
scripts/: diagnose_logs.py  docker-test.sh  release.py  run-integration-tests.sh
teamspeak_mcp/: __init__.py  __main__.py  server.py  teamspeak_connection.py
teamspeak_mcp/tools/: __init__.py  add_log_entry.py  assign_client_to_group.py  ban_client.py  channel_info.py  client_info_detailed.py  create_channel.py  create_privilege_token.py  create_server_group.py  create_server_snapshot.py  delete_channel.py  deploy_server_snapshot.py  diagnose_permissions.py  find_channels.py  get_connection_info.py  get_file_info.py  get_instance_logs.py  kick_client.py  list_bans.py  list_channels.py  list_clients.py  list_complaints.py  list_files.py  list_privilege_tokens.py  list_server_groups.py  manage_ban_rules.py  manage_channel_permissions.py  manage_file_permissions.py  manage_server_group_permissions.py  manage_user_permissions.py  move_client.py  poke_client.py  search_clients.py  send_channel_message.py  send_private_message.py  server_info.py  set_channel_talk_power.py  update_channel.py  update_server_settings.py  view_server_logs.py
tests/: README.md  test_integration.py
~/: teamspeak-mcp.env
