[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teamspeak-mcp"
version = "1.0.0"
description = "MCP server for controlling TeamSpeak from AI models"
authors = [{name = "Nicolas Varrot"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "ts3>=2.0.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
]

[project.scripts]
teamspeak-mcp = "teamspeak_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["teamspeak_mcp*"] 