[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teamspeak-mcp"
version = "1.1.0"
description = "TeamSpeak MCP Server - Control TeamSpeak from AI models"
authors = [{name = "MarlBurroW", email = "contact@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.9.0",
    "ts3>=1.0.11",
    "pydantic>=2.11.0",
]

[project.scripts]
teamspeak-mcp = "teamspeak_mcp.server:main"

[project.urls]
Homepage = "https://github.com/MarlBurroW/teamspeak-mcp"
Repository = "https://github.com/MarlBurroW/teamspeak-mcp"
Issues = "https://github.com/MarlBurroW/teamspeak-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["teamspeak_mcp*"] 